--- a/oxide/crates/node/npm/linux-x64-musl/package.json
+++ b/oxide/crates/node/npm/linux-x64-musl/package.json
@@ -17,7 +17,8 @@
     "tailwindcss-oxide.linux-x64-musl.node"
   ],
   "publishConfig": {
-    "provenance": true
+    "provenance": true,
+    "access": "public"
   },
   "license": "MIT",
   "engines": {
