--- a/oxide/crates/node/npm/android-arm-eabi/package.json
+++ b/oxide/crates/node/npm/android-arm-eabi/package.json
@@ -17,7 +17,8 @@
     "tailwindcss-oxide.android-arm-eabi.node"
   ],
   "publishConfig": {
-    "provenance": true
+    "provenance": true,
+    "access": "public"
   },
   "license": "MIT",
   "engines": {
