--- a/oxide/crates/node/npm/android-arm64/package.json
+++ b/oxide/crates/node/npm/android-arm64/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tailwindcss/oxide-android-arm64",
-  "version": "4.0.0-alpha.8",
+  "version": "0.0.0-internal.b2586d4e",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tailwindlabs/tailwindcss.git",
