--- a/packages/@tailwindcss-postcss/package.json
+++ b/packages/@tailwindcss-postcss/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@tailwindcss/oxide": "workspace:^",
+    "lightningcss": "^1.24.0",
     "postcss-import": "^16.0.0",
     "tailwindcss": "workspace:^"
   },
