--- a/packages/@tailwindcss-vite/package.json
+++ b/packages/@tailwindcss-vite/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@tailwindcss/oxide": "workspace:^",
+    "lightningcss": "^1.24.0",
     "tailwindcss": "workspace:^"
   },
   "devDependencies": {
