--- a/packages/tailwindcss/package.json
+++ b/packages/tailwindcss/package.json
@@ -58,11 +58,9 @@
     "theme.css",
     "utilities.css"
   ],
-  "dependencies": {
-    "lightningcss": "^1.24.0"
-  },
   "devDependencies": {
     "@tailwindcss/oxide": "workspace:^",
-    "@types/node": "^20.10.8"
+    "@types/node": "^20.10.8",
+    "lightningcss": "^1.24.0"
   }
 }
