--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
-name: Release Insiders — Stable
+name: Release
 
 on:
-  push:
-    branches: [master]
+  release:
+    types: [published]
 
 permissions:
   contents: read
@@ -10,33 +10,28 @@ permissions:
 
 env:
   CI: true
-  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-  TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
-  CACHE_PREFIX: stable
-  NODE_VERSION: 16
-  RELEASE_CHANNEL: insiders
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [14]
+
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ env.NODE_VERSION }}
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ matrix.node-version }}
           registry-url: 'https://registry.npmjs.org'
+          cache: 'npm'
 
       - name: Use the `stable` engine
         run: |
           node ./scripts/swap-engines.js
-
-      - name: Cache node_modules
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-${{ env.NODE_VERSION }}-${{ env.CACHE_PREFIX }}-node_modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
         run: npm install
@@ -45,18 +40,12 @@ jobs:
         run: npm run build
 
       - name: Test
-        run: |
-          npm run test || \
-          npm run test || \
-          npm run test || exit 1
+        run: npm run test
 
-      - name: Resolve version
-        id: vars
+      - name: Calculate environment variables
         run: |
-          echo "SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-
-      - name: 'Version based on commit: 0.0.0-${{ env.RELEASE_CHANNEL }}.${{ env.SHA_SHORT }}'
-        run: npm version 0.0.0-${{ env.RELEASE_CHANNEL }}.${{ env.SHA_SHORT }} --force --no-git-tag-version
+          echo "RELEASE_CHANNEL=$(node ./scripts/release-channel.js)" >> $GITHUB_ENV
+          echo "TAILWINDCSS_VERSION=$(node -e 'console.log(require(`./package.json`).version);')" >> $GITHUB_ENV
 
       - name: Publish
         run: npm publish --provenance --tag ${{ env.RELEASE_CHANNEL }}
@@ -64,6 +53,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Trigger Tailwind Play update
+        if: env.RELEASE_CHANNEL == 'latest'
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.TAILWIND_PLAY_TOKEN }}
@@ -74,6 +64,6 @@ jobs:
               ref: 'master',
               workflow_id: 'upgrade-tailwindcss.yml',
               inputs: {
-                insidersVersion: '0.0.0-${{ env.RELEASE_CHANNEL }}.${{ env.SHA_SHORT }}'
+                version: '${{ env.TAILWINDCSS_VERSION }}'
               }
             })
