ensure pnpm points to `crates` instead of `oxide/crates`

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,5 @@
 packages:
-  - 'oxide/crates/node'
-  - 'oxide/crates/node/npm/*'
+  - 'crates/node'
+  - 'crates/node/npm/*'
   - 'packages/*'
   - 'playgrounds/*'
