--- a/crates/node/package.json
+++ b/crates/node/package.json
@@ -4,7 +4,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tailwindlabs/tailwindcss.git",
-    "directory": "oxide/crates/node"
+    "directory": "crates/node"
   },
   "main": "index.js",
   "types": "index.d.ts",
