--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,11 +47,11 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ./oxide/target/
-            ./oxide/crates/node/*.node
-            ./oxide/crates/node/index.js
-            ./oxide/crates/node/index.d.ts
-          key: ${{ runner.os }}-oxide-${{ hashFiles('./oxide/crates/**/*') }}
+            ./target/
+            ./crates/node/*.node
+            ./crates/node/index.js
+            ./crates/node/index.d.ts
+          key: ${{ runner.os }}-oxide-${{ hashFiles('./crates/**/*') }}
 
       - name: Install dependencies
         run: pnpm install
