--- a/crates/node/Cargo.toml
+++ b/crates/node/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["cdylib"]
 # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
 napi = { version = "2.13.1", default-features = false, features = ["napi4"] }
 napi-derive = "2.13.0"
-tailwindcss-core = { path = "../core" }
+tailwindcss-oxide = { path = "../oxide" }
 rayon = "1.5.3"
 
 [build-dependencies]
