--- a/packages/tailwindcss/package.json
+++ b/packages/tailwindcss/package.json
@@ -65,7 +65,8 @@
   "devDependencies": {
     "@tailwindcss/oxide": "workspace:^",
     "@types/node": "^20.10.8",
-    "lightningcss": "^1.24.0"
+    "lightningcss": "^1.24.0",
+    "magic-string": "^0.30.8"
   },
   "dependencies": {
     "source-map-js": "^1.2.0"
