--- a/packages/@tailwindcss-cli/package.json
+++ b/packages/@tailwindcss-cli/package.json
@@ -32,6 +32,7 @@
     "@parcel/watcher": "^2.4.1",
     "@tailwindcss/oxide": "workspace:^",
     "lightningcss": "^1.24.0",
+    "magic-string": "^0.30.8",
     "mri": "^1.2.0",
     "picocolors": "^1.0.0",
     "postcss": "8.4.24",
