--- a/packages/@tailwindcss-vite/package.json
+++ b/packages/@tailwindcss-vite/package.json
@@ -34,7 +34,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
-    "vite": "^5.2.11"
+    "vite": "^5.2.11",
+    "tailwindcss-test-utils": "workspace:^"
   },
   "peerDependencies": {
     "vite": "^5.2.0"
