only add `tailwindcss-test-utils` to `tailwindcss` as a dev dependency
Because `src/io.ts` is requiring the plugin.

--- a/packages/@tailwindcss-cli/package.json
+++ b/packages/@tailwindcss-cli/package.json
@@ -39,7 +39,6 @@
     "tailwindcss": "workspace:^"
   },
   "devDependencies": {
-    "@types/postcss-import": "^14.0.3",
-    "tailwindcss-test-utils": "workspace:^"
+    "@types/postcss-import": "^14.0.3"
   }
 }
