--- a/packages/@tailwindcss-postcss/package.json
+++ b/packages/@tailwindcss-postcss/package.json
@@ -38,7 +38,6 @@
   "devDependencies": {
     "@types/node": "^20.12.12",
     "@types/postcss-import": "^14.0.3",
-    "postcss": "8.4.24",
-    "tailwindcss-test-utils": "workspace:^"
+    "postcss": "8.4.24"
   }
 }
