--- a/crates/oxide/Cargo.toml
+++ b/crates/oxide/Cargo.toml
@@ -15,6 +15,7 @@ tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 walkdir = "2.3.3"
 ignore = "0.4.20"
 lazy_static = "1.4.0"
+serial_test = "3.1.1"
 
 [dev-dependencies]
 tempfile = "3.5.0"
