Disable fail-fast so that windows tests run through even when mac tests fail

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ permissions:
 jobs:
   build:
     strategy:
+      fail-fast: false
       matrix:
         node-version: [20]
         runner: [ubuntu-latest, windows-latest]
