--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,8 @@ jobs:
 
       - name: Lint
         run: pnpm run lint
+        # Only lint on linux to avoind \r\n line ending errors
+        if: matrix.runner == 'ubuntu-latest'
 
       - name: Test
         run: pnpm run test
