Revert changes that makes CI run on Windows (and mvoe it to #14065)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,12 @@ permissions:
 
 jobs:
   build:
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+
     strategy:
-      fail-fast: false
       matrix:
         node-version: [20]
-        runner: [ubuntu-latest, windows-latest]
-
-    runs-on: ${{ matrix.runner }}
-    timeout-minutes: 15
 
     steps:
       - uses: actions/checkout@v3
@@ -63,8 +61,6 @@ jobs:
 
       - name: Lint
         run: pnpm run lint
-        # Only lint on linux to avoind \r\n line ending errors
-        if: matrix.runner == 'ubuntu-latest'
 
       - name: Test
         run: pnpm run test
