commit changes made locally to be able to run `pnpm build && pnpm test -- -u`

--- a/packages/@tailwindcss-postcss/package.json
+++ b/packages/@tailwindcss-postcss/package.json
@@ -30,7 +30,7 @@
     }
   },
   "dependencies": {
-    "@tailwindcss/oxide": "workspace:^",
+    "@tailwindcss/oxide": "4.0.0-alpha.18",
     "lightningcss": "^1.25.1",
     "postcss-import": "^16.1.0",
     "tailwindcss": "workspace:^"
