--- a/packages/@tailwindcss-vite/package.json
+++ b/packages/@tailwindcss-vite/package.json
@@ -28,7 +28,7 @@
     }
   },
   "dependencies": {
-    "@tailwindcss/oxide": "workspace:^",
+    "@tailwindcss/oxide": "4.0.0-alpha.18",
     "lightningcss": "^1.25.1",
     "tailwindcss": "workspace:^"
   },
