Revert "commit changes made locally to be able to run `pnpm build && pnpm test -- -u`"
This reverts commit 5d2d18e94dff56f5f76533b7be391238c099b15c.

--- a/packages/@tailwindcss-postcss/package.json
+++ b/packages/@tailwindcss-postcss/package.json
@@ -30,7 +30,7 @@
     }
   },
   "dependencies": {
-    "@tailwindcss/oxide": "4.0.0-alpha.18",
+    "@tailwindcss/oxide": "workspace:^",
     "lightningcss": "^1.25.1",
     "postcss-import": "^16.1.0",
     "tailwindcss": "workspace:^"
