--- a/packages/@tailwindcss-cli/package.json
+++ b/packages/@tailwindcss-cli/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "@parcel/watcher": "^2.4.1",
-    "@tailwindcss/oxide": "4.0.0-alpha.18",
+    "@tailwindcss/oxide": "workspace:^",
     "lightningcss": "^1.25.1",
     "mri": "^1.2.0",
     "picocolors": "^1.0.1",
