--- a/playgrounds/vite/package.json
+++ b/playgrounds/vite/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "workspace:^",
     "@vitejs/plugin-react": "^4.3.0",
+    "autoprefixer": "^10.4.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "workspace:^"
