--- a/crates/oxide/Cargo.toml
+++ b/crates/oxide/Cargo.toml
@@ -16,6 +16,7 @@ walkdir = "2.3.3"
 ignore = "0.4.20"
 lazy_static = "1.4.0"
 glob-match = "0.2.1"
+serial_test = "3.1.1"
 
 [dev-dependencies]
 tempfile = "3.5.0"
