Disable prettier-plugin-embed for built-in HTML and CSS embeds

--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
           "parser": "jsonc"
         }
       }
+    ],
+    "embeddedNoopComments": [
+      "css",
+      "html"
+    ],
+    "embeddedNoopTags": [
+      "css",
+      "html"
     ]
   },
   "scripts": {
