Try killing Vite by port

--- a/integrations/package.json
+++ b/integrations/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "dedent": "1.5.3",
-    "fast-glob": "^3.3.2"
+    "fast-glob": "^3.3.2",
+    "kill-port": "^2.0.1"
   }
 }
