--- a/integrations/package.json
+++ b/integrations/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
+    "@types/tcp-port-used": "^1.0.4",
     "dedent": "1.5.3",
     "fast-glob": "^3.3.2",
-    "kill-port": "^2.0.1"
+    "kill-port": "^2.0.1",
+    "tcp-port-used": "^1.0.2"
   }
 }
