--- a/integrations/package.json
+++ b/integrations/package.json
@@ -6,7 +6,6 @@
     "@types/tcp-port-used": "^1.0.4",
     "dedent": "1.5.3",
     "fast-glob": "^3.3.2",
-    "kill-port": "^2.0.1",
-    "tcp-port-used": "^1.0.2"
+    "kill-port": "^2.0.1"
   }
 }
