--- a/packages/tailwindcss/package.json
+++ b/packages/tailwindcss/package.json
@@ -64,7 +64,7 @@
   ],
   "devDependencies": {
     "@tailwindcss/oxide": "workspace:^",
-    "@types/node": "^20.12.12",
+    "@types/node": "catalog:",
     "lightningcss": "^1.25.1"
   }
 }
