--- a/playgrounds/vite/package.json
+++ b/playgrounds/vite/package.json
@@ -19,7 +19,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "bun": "^1.1.10",
-    "vite": "^5.2.11",
+    "vite": "catalog:",
     "vite-plugin-handlebars": "^2.0.0"
   }
 }
