--- a/integrations/package.json
+++ b/integrations/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
+    "@parcel/watcher": "^2.4.1",
     "dedent": "1.5.3",
     "fast-glob": "^3.3.2",
     "kill-port": "^2.0.1"
