--- a/packages/internal-postcss-fix-relative-paths/package.json
+++ b/packages/internal-postcss-fix-relative-paths/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^20.12.12",
+    "@types/node": "catalog:",
     "@types/postcss-import": "^14.0.3",
     "postcss": "8.4.24",
     "postcss-import": "^16.1.0"
