--- a/playgrounds/nextjs/package.json
+++ b/playgrounds/nextjs/package.json
@@ -21,7 +21,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.0",
-    "typescript": "^5.4.5"
+    "eslint-config-next": "^14.2.5",
+    "typescript": "^5.5.4"
   }
 }
