--- a/packages/@tailwindcss-postcss/package.json
+++ b/packages/@tailwindcss-postcss/package.json
@@ -31,14 +31,14 @@
   },
   "dependencies": {
     "@tailwindcss/oxide": "workspace:^",
-    "lightningcss": "^1.25.1",
+    "lightningcss": "catalog:",
     "postcss-import": "^16.1.0",
     "tailwindcss": "workspace:^"
   },
   "devDependencies": {
     "@types/node": "catalog:",
     "@types/postcss-import": "^14.0.3",
-    "postcss": "8.4.24",
+    "postcss": "^8.4.41",
     "internal-example-plugin": "workspace:*",
     "internal-postcss-fix-relative-paths": "workspace:^"
   }
