--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,5 +6,6 @@ packages:
   - 'integrations'
 
 catalog:
-  vite: ^5.2.11
-  '@types/node': ^20.12.12
+  '@types/node': ^20.14.8
+  lightningcss: ^1.26.0
+  vite: ^5.4.0
