Add support for the `tailwindcss/plugin` export

--- a/packages/tailwindcss/package.json
+++ b/packages/tailwindcss/package.json
@@ -31,7 +31,8 @@
     "./theme.css": "./theme.css",
     "./theme": "./theme.css",
     "./utilities.css": "./utilities.css",
-    "./utilities": "./utilities.css"
+    "./utilities": "./utilities.css",
+    "./plugin": "./dist/plugin.js"
   },
   "publishConfig": {
     "provenance": true,
